--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@token-alchemy/types": "workspace:*",
     "defu": "^6.1.2",
-    "lodash-es": "^4.17.21"
+    "lodash-es": "^4.17.21",
+    "zod": "^3.22.2"
   }
 }
