--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,12 @@
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": ["dist/**"]
+    },
+    "test": {
+      "dependsOn": ["^build"],
+      "persistent": true,
+      "cache": false
     },
     "lint": {},
     "dev": {
