feat(core): implement prototype
* chore: take one (saving for posterity)

* chore: wip: types package

* feat: wip: resolveTokens works

* feat: resolve references

* feat: dictionary

* refactor: use references map

* chore: remove unused type

* chore: scaffold cli

* feat: serialize

* chore: scripts

* feat: convenience exports

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,16 +1,51 @@
 {
   "name": "@token-alchemy/core",
-  "version": "1.0.0",
-  "private": true,
+  "version": "0.0.0",
+  "description": "Token utilities and operations",
+  "author": "Tim Morris <timthewebguy@gmail.com>",
+  "license": "MIT",
+  "sideEffects": false,
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "lint": "eslint --fix ."
+    "build": "tsup",
+    "lint": "eslint --fix .",
+    "release": "release-it",
+    "test:watch": "vitest",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@token-alchemy/eslint-config": "workspace:*",
     "@token-alchemy/tsconfig": "workspace:*",
-    "@types/node": "^20.5.4",
+    "@types/lodash-es": "^4.17.9",
+    "@types/node": "^20.5.9",
+    "changelogen": "^0.5.5",
+    "release-it": "^16.2.1",
     "tsup": "^7.2.0",
-    "typescript": "^5.1.6",
-    "vitest": "^0.34.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.3"
+  },
+  "dependencies": {
+    "@token-alchemy/types": "workspace:*",
+    "defu": "^6.1.2",
+    "lodash-es": "^4.17.21",
+    "zod": "^3.22.2"
+  },
+  "release-it": {
+    "git": {
+      "commitMessage": "chore(release): release v${version}"
+    },
+    "github": {
+      "release": true,
+      "releaseName": "v${version}"
+    },
+    "hooks": {
+      "after:bump": "pnpm exec changelogen@latest --no-commit --no-tag --output --r $(node -p \"require('./package.json').version\")"
+    }
   }
 }
