--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,19 @@
 {
   "name": "@token-alchemy/core",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Token utilities and operations",
   "author": "Tim Morris <timthewebguy@gmail.com>",
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
