--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@token-alchemy/types",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Type definitions for Token Alchemy",
   "author": "Tim Morris <timthewebguy@gmail.com>",
   "license": "MIT",
   "sideEffects": false,
   "type": "module",
   "module": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
