--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@token-alchemy/core",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Token utilities and operations",
   "author": "Tim Morris <timthewebguy@gmail.com>",
   "license": "MIT",
@@ -12,6 +12,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
+      "main": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
