--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@token-alchemy/types",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Type definitions for Token Alchemy",
   "author": "Tim Morris <timthewebguy@gmail.com>",
   "license": "MIT",
@@ -12,6 +12,7 @@
   "exports": {
     ".": {
       "import": "./dist/index.js",
+      "main": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
