--- a/packages/format/package.json
+++ b/packages/format/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@token-alchemy/core",
+  "name": "@token-alchemy/format",
   "version": "0.1.5",
-  "description": "Formatting utilities and operations",
+  "description": "Token utilities and operations",
   "author": "Tim Morris <timthewebguy@gmail.com>",
   "license": "MIT",
   "sideEffects": false,
@@ -27,6 +27,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@token-alchemy/core": "workspace:^",
     "@token-alchemy/eslint-config": "workspace:*",
     "@token-alchemy/tsconfig": "workspace:*",
     "@types/lodash-es": "^4.17.9",
@@ -38,8 +39,9 @@
   },
   "dependencies": {
     "@token-alchemy/types": "workspace:*",
-    "defu": "^6.1.2",
-    "lodash-es": "^4.17.21",
-    "zod": "^3.22.2"
+    "lodash-es": "^4.17.21"
+  },
+  "peerDependencies": {
+    "@token-alchemy/core": "workspace:*"
   }
 }
