--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@token-alchemy/core",
   "version": "0.1.5",
-  "description": "Formatting utilities and operations",
+  "description": "Core Token resolution utilities",
   "author": "Tim Morris <timthewebguy@gmail.com>",
   "license": "MIT",
   "sideEffects": false,
