--- a/package.json
+++ b/package.json
@@ -3,22 +3,19 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "prepare": "husky install",
+    "check": "biome check --apply-unsafe .",
+    "prepare": "lefthook install",
     "publish-packages": "turbo run build lint test && changeset version && changeset publish"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.2",
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@token-alchemy/tsconfig": "workspace:*",
-    "eslint": "^8.48.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3",
-    "turbo": "^1.10.13"
+    "@biomejs/biome": "^1.5.2",
+    "@changesets/cli": "^2.27.1",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@repo/tsconfig": "workspace:*",
+    "lefthook": "^1.5.7",
+    "turbo": "^1.11.3"
   },
-  "packageManager": "pnpm@8.8.0",
+  "packageManager": "pnpm@8.14.1",
   "name": "token-alchemy"
 }
