--- a/packages/format/package.json
+++ b/packages/format/package.json
@@ -22,20 +22,18 @@
   },
   "scripts": {
     "build": "unbuild",
-    "lint": "eslint --fix .",
     "test:watch": "vitest",
     "test": "vitest run"
   },
   "devDependencies": {
     "@token-alchemy/core": "workspace:^",
-    "@token-alchemy/eslint-config": "workspace:*",
-    "@token-alchemy/tsconfig": "workspace:*",
-    "@types/lodash-es": "^4.17.9",
-    "@types/node": "^20.5.9",
+    "@repo/tsconfig": "workspace:*",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.11.5",
     "changelogen": "^0.5.5",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.3",
     "unbuild": "^2.0.0",
-    "vitest": "^0.34.3"
+    "vitest": "^1.2.1"
   },
   "dependencies": {
     "@token-alchemy/types": "workspace:*",
