--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -25,8 +25,7 @@
     "build": "unbuild"
   },
   "devDependencies": {
-    "@token-alchemy/eslint-config": "workspace:*",
-    "@token-alchemy/tsconfig": "workspace:*",
+    "@repo/tsconfig": "workspace:*",
     "unbuild": "^2.0.0"
   }
 }
