--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@token-alchemy/tsconfig/base.json",
+  "extends": "@repo/tsconfig/base.json",
   "compilerOptions": {},
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
