--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,9 +14,7 @@
   },
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "publishConfig": {
     "access": "public"
   },
@@ -28,16 +26,16 @@
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.11.5",
+    "@types/node": "^22.5.4",
     "changelogen": "^0.5.5",
-    "typescript": "^5.3.3",
+    "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
-    "vitest": "^1.2.1"
+    "vitest": "^2.0.5"
   },
   "dependencies": {
     "@token-alchemy/types": "workspace:*",
     "defu": "^6.1.4",
     "lodash-es": "^4.17.21",
-    "zod": "^3.22.4"
+    "zod": "^3.23.8"
   }
 }
