--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,6 +19,7 @@
     "access": "public"
   },
   "scripts": {
+    "run": "tsx ./src/index.ts",
     "build": "unbuild",
     "test:watch": "vitest",
     "test": "vitest run"
@@ -28,6 +29,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.5.4",
     "changelogen": "^0.5.5",
+    "tsx": "^4.19.1",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "vitest": "^2.0.5"
