--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "deps:reinstall": "pnpm dlx rimraf node_modules pnpm-lock.yaml ./**/node_modules && pnpm install",
     "test": "turbo run test",
     "dev": "turbo run dev",
     "check": "biome check --write --unsafe .",
@@ -9,14 +10,15 @@
     "publish-packages": "turbo run build lint test && changeset version && changeset publish"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@changesets/cli": "^2.27.8",
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
+    "@biomejs/biome": "^1.9.3",
+    "@changesets/cli": "^2.27.9",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
     "@repo/tsconfig": "workspace:*",
-    "lefthook": "^1.7.15",
-    "turbo": "^2.1.1"
+    "lefthook": "^1.7.18",
+    "turbo": "^2.1.3",
+    "typescript": "^5.6.2"
   },
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.12.0",
   "name": "token-alchemy"
 }
