--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,19 +25,13 @@
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.5.4",
-    "changelogen": "^0.5.5",
+    "@types/node": "^22.7.4",
     "tsx": "^4.19.1",
-    "typescript": "^5.5.4",
+    "typescript": "^5.6.2",
     "unbuild": "^2.0.0",
-    "vitest": "^2.0.5"
+    "vitest": "^2.1.2"
   },
   "dependencies": {
-    "@token-alchemy/types": "workspace:*",
-    "change-case": "^5.4.4",
-    "defu": "^6.1.4",
-    "lodash-es": "^4.17.21",
-    "zod": "^3.23.8"
+    "change-case": "^5.4.4"
   }
 }
