--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,6 +1,5 @@
 {
-  "extends": "@repo/tsconfig/base.json",
-  "compilerOptions": {},
-  "include": ["**/*.ts"],
+  "extends": "@repo/tsconfig/workspace.json",
+  "include": ["./src/*.ts"],
   "exclude": ["node_modules"]
 }
