--- a/tooling/tsconfig/package.json
+++ b/tooling/tsconfig/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
-  "main": "./base.json",
+  "exports": {
+    "./root.json": "./root.json",
+    "./workspace.json": "./workspace.json"
+  },
   "publishConfig": {
     "access": "public"
   }
