--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@token-alchemy/core",
-  "version": "1.0.1",
+  "name": "token-alchemy",
+  "version": "0.0.1",
   "description": "Core Token resolution utilities",
   "author": "Tim Morris <timthewebguy@gmail.com>",
   "license": "MIT",
@@ -9,14 +9,12 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "types": "./dist/index.d.ts"
     }
   },
-  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "publishConfig": {
     "access": "public"
   },
@@ -27,17 +25,13 @@
   },
   "devDependencies": {
     "@repo/tsconfig": "workspace:*",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.11.5",
-    "changelogen": "^0.5.5",
-    "typescript": "^5.3.3",
+    "@types/node": "^22.7.4",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.2",
     "unbuild": "^2.0.0",
-    "vitest": "^1.2.1"
+    "vitest": "^2.1.2"
   },
   "dependencies": {
-    "@token-alchemy/types": "workspace:*",
-    "defu": "^6.1.4",
-    "lodash-es": "^4.17.21",
-    "zod": "^3.22.4"
+    "change-case": "^5.4.4"
   }
 }
